# UCV-ATE-SI-LABORATORIO2

./: README.md  seccion2.py
laboratorio1_ia/: pyproject.toml  requirements.txt
laboratorio1_ia/src/laboratorio1_ia/: main.py
laboratorio1_ia/tests/: test_main.py
