[project]
name = "laboratorio1-ia"
version = "0.1.0"
description = "Practica 1 Sistemas Inteligentes"
authors = [
    {name = "Anderson Roque"}
]
requires-python = "^3.13"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["src"]